Restructure ERDA SFTP client. Adds new status to file table.